# emonev-kotategal-2026

./: .gitignore
SERVER/: .env  alembic.ini  dokren.json  pm2save  pyproject.toml  requirements.txt  start.sh  tes.json  test.py  uvicorn.service
SERVER/ASSETS_STATIC/css/: errorstyle.css  style.css
SERVER/ASSETS_STATIC/images/: logo-icon.psd  logo.pngpp  logo.psd
SERVER/ASSETS_STATIC/js/: dashboard-main.js  pcoded.js  tes.json  treeview.js
SERVER/DATA/: dokren.json
SERVER/alembic/: env.py
SERVER/app/: main.py
SERVER/app/api/: api_router.py  dak.py  dokren.py  fmis.py  kinerja.py  kinerjakota.py  login.py  pengaturan.py  pengguna.py  personel.py  pubapi.py  ref.py  referensi.py  rencanakinerja.py  renstra.py  rfk.py  rko.py  rpjmd.py  sakip.py  sipd.py
SERVER/app/cli/: aaaa  apbd.py  apbd_worker.py  config_db.py  indikatortujuansasaran.py  reqqqq.txt  sipd.py  sipdri.js  updaterenstra.py  updaterenstra2.py  worker_consumer.py
SERVER/app/core/: chainfilter.py  config.py  db.py  deps.py  exceptions.py  whatsapp.py
SERVER/sql/: blud_bos.sql  renja.sql  renstra.sql  sql.sql  sqlrenstra.sql  sqlupdate.sql
SERVER/templates/: 400.html  admin.html  base.html  doklap-pd-modal.html  dokren-pd-modal.html  elaba-dashboard.html  evaluasi-kinerja.html  footer.html  frontpage.html  header.html  indikator.html  kinerja-kota.html  kinerja-pd.html  pelaporan-kinerja.html  pengukuran-kinerja.html  perencanaa.html  perencanaan.html  pohon-kinerja.html  rencana-kota.html  rencana-pd.html  reports_dssd_list.html  rpjmd.html  rpjpd.html  struktur-kinerja.html  unduhan.html
(+522 files in other folders)
