[tool.poetry]
name = "simlaba"
version = "0.1.0"
description = ""
authors = ["Herry"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.12"
passlib = "^1.7.4"
pydantic = "^2.9.2"
sqlmodel = "^0.0.22"
psycopg = "^3.2.3"
jinja2 = "^3.1.4"
alembic = "^1.13.3"
httpx = "^0.27.2"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
pydantic-settings = "^2.6.0"
sentry-sdk = "^2.17.0"
email-validator = "^2.2.0"
uuid7 = "^0.1.0"
pycurl = "^7.45.3"
jpype1 = "^1.5.1"
selenium = "^4.27.1"
beautifulsoup4 = "^4.12.3"
webdriver-manager = "^4.0.2"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
